ros2_home_auto/log/build_2024-03-28_14-57-28/led_control/stderr.log
/usr/lib/python3/dist-packages/setuptools/command/install.py:34: SetuptoolsDeprecationWarning: setup.py install is deprecated. Use build and pip and other standards-based tools.
  warnings.warn(
  File "/home/jan/dev/ros2_home_auto/install/led_control/lib/python3.10/site-packages/led_control/led_control_server.py", line 36
    self.get_logger().info(f"{self.get_parameter("led_count").get_parameter_value().integer_value}; {self.get_parameter("led_pin").get_parameter_value().integer_value}")
                                                  ^^^^^^^^^
SyntaxError: f-string: unmatched '('

